--- a/Task_1.ipynb
+++ b/Task_1.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "**Задание 1**\n",
     "\n",
-    "Retention – один из самых важных показателей в компании. Ваша задача – написать функцию, которая будет считать retention игроков (по дням от даты регистрации игрока). "
+    "Retention – один из самых важных показателей в компании. Задача – написать функцию, которая будет считать retention игроков (по дням от даты регистрации игрока). "
    ]
   },
   {
